[package]
name = "mine_sweeper"
version = "0.1.0"
authors = ["Bartosz Nowak <sztosz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.1.3" 
bevy = { git = "https://github.com/bevyengine/bevy" }
rand = "0.7.3"
